Fixed fire breath collision, Added support for more card ID, Fixed card bugs
Now supporting cards with the IDs: 62, 72, 82, 92.
Fixed boss fire breath collision
Fixed boss cards bugs (hp and speed)

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,21 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
+textures/cards/boss_cards/rocket_pad.png.import
+textures/cards/boss_cards/rocket.png.import
+textures/cards/boss_cards/lazer_gun_balls3.png.import
+textures/cards/boss_cards/lazer_gun_balls2.png.import
+textures/cards/boss_cards/lazer_gun_balls.png.import
+textures/cards/boss_cards/lazer_gun.png.import
+textures/cards/boss_cards/lazer.png.import
+textures/cards/boss_cards/fire_particle.png.import
+textures/cards/boss_cards/fire_dispenser.png.import
+textures/cards/boss_cards/fire_dispenser.png.import
+textures/cards/boss_cards/fire_particle.png.import
+textures/cards/boss_cards/lazer.png.import
+textures/cards/boss_cards/lazer_gun.png.import
+textures/cards/boss_cards/lazer_gun_balls.png.import
+textures/cards/boss_cards/lazer_gun_balls2.png.import
+textures/cards/boss_cards/lazer_gun_balls3.png.import
+textures/cards/boss_cards/rocket.png.import
+textures/cards/boss_cards/rocket_pad.png.import
