--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ textures/cards/boss_cards/lazer_gun_balls2.png.import
 textures/cards/boss_cards/lazer_gun_balls3.png.import
 textures/cards/boss_cards/rocket.png.import
 textures/cards/boss_cards/rocket_pad.png.import
+textures/background.png.import
+textures/background_top.png.import
+textures/cards/boss_cards/boss_web.png.import
+textures/cards/boss_cards/spider1.png.import
+textures/cards/boss_cards/spider2.png.import
+textures/player/sticky_particle.png.import
